# rfd-scraper

./: Cargo.toml  LICENSE  README.md  main.js  output.html  package-lock.json  raw.js
api/: airbnb.rs
src-rs/: scrapper.rs
